# homelab

./: .gitattributes  .gitignore  .kube-linter.yaml  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  Makefile  README.md  Tiltfile  apuntes.md  hardware.md  helmfile.yaml  ruff.toml
.github/: pull_request_template.md
.github/workflows/: api.yaml  dagster.yaml  django.yaml  python-apps-lint.yaml  python-quality.yaml  runner.yaml  validate.yaml
apps/api/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  secrets.sops.yaml  values-dev.yaml.gotmpl  values.yaml
apps/api/jobs/print-reminders-rows/: main.py
apps/api/src/: config.py  database.py  dependencies.py  log_context.py  logging_config.py  main.py  metrics.py  request_logging.py
apps/api/src/crud/: reminders.py
apps/api/src/database_models/: reminder.py
apps/api/src/routers/: health.py  reminders.py
apps/api/tests/: conftest.py  test_database.py  test_health.py  test_jobs_print_reminders_rows.py  test_reminders.py
apps/dagster/: Dockerfile  README.md  dagster.yaml  entrypoint.sh  k8s-runner.yaml  kustomization.yaml  pyproject.toml  secrets.sops.yaml  values-code-server.yaml  values-common.yaml  values-daemon.yaml  values-webserver.yaml  workspace-grpc.yaml  workspace.yaml
apps/dagster/src/dagster_project/: dbt_config.py  definitions.py
apps/dagster/src/dagster_project/assets/exports/: reminders.py
apps/dagster/src/dagster_project/assets/ingestion/: events_cs.py  events_nba.py  events_ufc.py  reminders.py
apps/dagster/src/dagster_project/assets/internal/: example.py
apps/dagster/src/dagster_project/assets/transformations/: reminders.py
apps/dagster/src/dagster_project/common/: config.py  event_checks.py  landing.py
apps/dagster/src/dagster_project/defs/jobs/: events.py  example.py  reminders.py  utils.py
apps/dagster/src/dagster_project/jobs/: events.py  example.py  reminders.py  utils.py
apps/dagster/src/dagster_project/ops/: __init__.py  hooks.py
apps/dagster/src/dagster_project/resources/: __init__.py  hltv.py  postgres.py  slack.py
apps/dagster/src/dagster_project/sensors/: failure.py
apps/dagster/src/dagster_project/sql/: exports.py  ingestion.py
apps/dagster/tests/: conftest.py
apps/dagster/tests/integration/: test_postgres_resource.py  test_reminders_postgres.py
apps/dagster/tests/unit/: test_assets.py  test_dbt_config.py  test_definitions.py  test_event_pipeline.py  test_hooks.py  test_jobs.py  test_resources.py  test_sensors.py
apps/django/: Dockerfile  README.md  entrypoint.sh  pyproject.toml  secrets.sops.yaml  values.local.yaml  values.yaml
apps/django/src/core/: admin.py  models.py  settings.py  sso.py  urls.py
apps/django/src/core/migrations/: 0001_create_superuser.py  0002_create_source_schema.py  0003_reminders_table.py  0004_feature_flags_table.py  0005_event_landing_tables.py
apps/django/src/core/static/admin/css/: quiet.css
apps/django/src/templates/admin/: base_site.html
apps/django/tests/: conftest.py  test_core_coverage.py  test_migrations.py  test_smoke.py  test_sso.py
apps/go-cron-test/: Dockerfile  cronjob.yaml
apps/runner/: Dockerfile  README.md  pyproject.toml  rbac.yaml  values-dev.yaml.gotmpl  values.yaml
apps/runner/src/: auth.py  config.py  cron.py  jobs_api.py  kubernetes_runner.py  main.py  metrics.py  models.py  runner_client.py
apps/runner/src/static/: app.js  styles.css
apps/runner/src/templates/: layout.html  runnables.html
apps/runner/tests/: conftest.py  test_auth.py  test_cron.py  test_jobs_api.py  test_kubernetes_runner.py  test_main.py  test_runner.py  test_static_assets.py
apps/workload-chart-example/: Dockerfile  Dockerfile.tilt  README.md  go.mod  values-dev.yaml.gotmpl  values.yaml
charts/workload/: Chart.yaml  README.md  values.yaml
docker/: docker-compose.yaml
notes/: cloudflared.md  home_assistant.md  scratch.md  talos.md
notes/hardware/: device_list.md  device_management.md  (+2 more)
scripts/: apply-authentik-terraform.sh  django-manage.sh  pre-commit-ty.sh  run-step.sh  run-with-service-status.sh  service-image.sh  setup-ingress-home.sh  setup-local-pihole-dns.sh  setup-registry-home.sh  setup-sops-age.sh  setup.sh  update-charts.sh  validate-manifests.sh
terraform/: .terraform.lock.hcl  authentik.tf  homelab_admin.tf  outputs.tf  providers.tf  variables.tf
(+75 files in other folders)
