[project]
name = "homelab-api"
version = "0.1.0"
description = "FastAPI service for homelab-owned APIs"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi>=0.115.0",
  "prometheus-client>=0.21.0",
  "psycopg2-binary>=2.9.10",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "testcontainers[postgres]>=4.0.0",
]
local = [
  "ty==0.0.32",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--tb=short",
  "--strict-markers",
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--color=yes",
]
markers = [
  "integration: Integration tests that require external services",
  "unit: Unit tests that don't require external dependencies",
]
