[project]
name = "homelab-runner"
version = "0.1.0"
description = "Internal UI for running approved homelab jobs"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "kubernetes>=32.0.0",
  "prometheus-client>=0.21.0",
  "pydantic-settings>=2.8.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]
local = [
  "ty==0.0.32",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--tb=short",
  "--strict-markers",
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-fail-under=90",
  "--color=yes",
]
markers = [
  "unit: Unit tests that don't require external dependencies",
]
